--- a/SmartLunchClient/src/app/sign/sign.component.html
+++ b/SmartLunchClient/src/app/sign/sign.component.html
@@ -16,7 +16,7 @@
             </mat-hint> -->
         </mat-form-field><br>
         <div class="">
-          <button mat-fab  (click)="signIn(email.value, password.value)"><mat-icon class="icon material-icons mat-18">check</mat-icon></button>
+          <button mat-fab color="primary" (click)="signIn(email.value, password.value)"><mat-icon class="icon material-icons mat-18">check</mat-icon></button>
         </div>
       </div>
 
@@ -43,7 +43,7 @@
             </mat-hint> -->
         </mat-input-container><br>
         <div class="">
-          <button mat-fab (click)="signUp(rUsername.value, rEmail.value, rPassword.value)"><mat-icon class="icon material-icons mat-18">check</mat-icon></button>
+          <button mat-fab color="primary" (click)="signUp(rUsername.value, rEmail.value, rPassword.value)"><mat-icon class="icon material-icons mat-18">check</mat-icon></button>
         </div>
       </div>
 
