--- a/SmartLunchClient/src/app/toolbar/toolbar.component.html
+++ b/SmartLunchClient/src/app/toolbar/toolbar.component.html
@@ -1,11 +1,12 @@
 <mat-toolbar>
-  <div class="divLogOut" style="text-align: right; " >
-    <button md-button (click)="signOut()">
+  <span>
+    {{user}}
+  </span>
+
+  <span id="SignOutButton">
+    <button mat-raised-button color="primary" (click)="signOut()" >
       <mat-icon>exit_to_app_black</mat-icon>
     </button>
-  </div>
-  <div class="divUser">
-    {{User}}
-  </div>
+  </span>
 
 </mat-toolbar>
