--- a/SmartLunchClient/src/app/sign/sign.component.html
+++ b/SmartLunchClient/src/app/sign/sign.component.html
@@ -9,11 +9,11 @@
         <mat-form-field >
             <input matInput #password placeholder="Contraseña" type="password" ng-model="user.firstName"
             formControlName="password" required>
-            <!-- <mat-hint *ngIf="invalidCredentials" [ngStyle]="{'color':'red'}" [@fadeInOut]>correo o contraseña inválido</mat-hint>
+            <mat-hint *ngIf="invalidCredentials" [ngStyle]="{'color':'red'}" [@fadeInOut]>correo o contraseña inválido</mat-hint>
             <mat-hint *ngIf="signInForm.controls['password'].hasError('minlength')" align="end"
                 [ngStyle]="{'color': '#B50000'}" [@fadeInOut]>
               Ingresa mínimo 8 caracteres
-            </mat-hint> -->
+            </mat-hint>
         </mat-form-field><br>
         <div class="">
           <button mat-fab color="primary" (click)="signIn(email.value, password.value)"><mat-icon class="icon material-icons mat-18">check</mat-icon></button>
@@ -25,25 +25,22 @@
     <mat-tab label="Sign Up">
       <div class="divSignIn">
         <mat-input-container class="mat-block">
-            <input matInput #rUsername placeholder="Username" formControlName="rUsername" type="rUsername" required>
-        </mat-input-container><br>
-        <mat-input-container class="mat-block">
             <input matInput #rEmail placeholder="Correo" formControlName="rEmail" type="rEmail" required>
         </mat-input-container><br>
         <mat-input-container class="mat-block">
-            <input matInput #rPassword placeholder="Contraseña" type="rPassword" ng-model="user.firstName"
+            <input matInput #rPassword placeholder="Contraseña" type="password" ng-model="user.firstName"
             formControlName="rPassword" required>
-            <!-- <mat-hint *ngIf="signUpForm.controls['rPassword'].hasError('minlength')" align="end"
+            <mat-hint *ngIf="signUpForm.controls['rPassword'].hasError('minlength')" align="end"
                 [ngStyle]="{'color': '#B50000'}" [@fadeInOut]>
               Ingresa mínimo 8 caracteres
             </mat-hint>
             <mat-hint *ngIf="signUpForm.controls['rPassword'].hasError('maxlength')" align="end"
                 [ngStyle]="{'color': '#B50000'}" [@fadeInOut]>
                Ingresa máximo 72 caracteres
-            </mat-hint> -->
+            </mat-hint>
         </mat-input-container><br>
         <div class="">
-          <button mat-fab color="primary" (click)="signUp(rUsername.value, rEmail.value, rPassword.value)"><mat-icon class="icon material-icons mat-18">check</mat-icon></button>
+          <button mat-fab color="primary" (click)="signUp(rEmail.value, rPassword.value)"><mat-icon class="icon material-icons mat-18">check</mat-icon></button>
         </div>
       </div>
 
