Changes to landing page

--- a/SmartLunchClient/src/app/banner/banner.component.html
+++ b/SmartLunchClient/src/app/banner/banner.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="toolbarStyle">
+<mat-toolbar id="banner-toolbar" color="primary">
 
   <div class="divLogOut" style="text-align: right; " >
     SmartLunchUn
