Added stuff to client

--- a/SmartLunchClient/src/app/landing/landing.component.html
+++ b/SmartLunchClient/src/app/landing/landing.component.html
@@ -4,7 +4,7 @@
 
 <div id="welcome">
   <img src="/assets/sandwich.png" alt="">
-  <h1 id="welcome-message">Bienvenido a SmartLunchUN</h1>
+  <h1 id="welcome-message">Bienvenido a <span class="brand">SmartLunchUN</span></h1>
   <button mat-raised-button color="primary" (click)="openLogin()">Iniciar Sesión</button>
   <button mat-raised-button color="accent" (click)="openSignUp()">Crear Cuenta</button>
 </div>
