--- a/SmartLunchClient/src/app/toolbar/toolbar.component.css
+++ b/SmartLunchClient/src/app/toolbar/toolbar.component.css
@@ -1,4 +1,16 @@
-#SignOutButton{
-  position: absolute;
-  right: 20px;
+#banner-toolbar{
+  width: 100%;
+  top: 0;
+}
+
+.brand{
+  font-family: 'Lobster', cursive;
+}
+
+.spacer{
+  flex: 1 1 auto;
+}
+
+#Toolbar{
+  padding: 0;
 }
