--- a/SmartLunchClient/src/app/restaurant/restaurant.component.css
+++ b/SmartLunchClient/src/app/restaurant/restaurant.component.css
@@ -1,4 +1,11 @@
 .card{
-  width: 250px;
-  cursor: pointer;
+  width: 350px;
+  text-align: center;
+}
+.card-title{
+  text-align: center;
+}
+
+.mat-card-header-text{
+  width: 100%;
 }
