--- a/SmartLunchClient/src/app/turn/turn.component.html
+++ b/SmartLunchClient/src/app/turn/turn.component.html
@@ -1,13 +1,13 @@
-<div class="MarginTop">
-  <mat-card class="card">
+<div class="info">
+    <mat-icon style="font-size: 256px; width: 100%;" color="accent">done_all</mat-icon>
+    <h1>Tienes el turno</h1>
     <div class="turn">
-      F15
+      {{turn}}
     </div>
-    <div class="text">
+    <h2>en la cafetería</h2>
+    <div class="turn">
       {{restaurant}}
     </div>
-    <div class="text">
-      Mas inform
-    </div>
-  </mat-card>
 </div>
+
+
