--- a/SmartLunchClient/src/app/turn/turn.component.html
+++ b/SmartLunchClient/src/app/turn/turn.component.html
@@ -1,13 +1,13 @@
 <div class="MarginTop">
   <mat-card class="card">
     <div class="turn">
-      F15
+      {{turn.number}}
     </div>
     <div class="text">
-      {{restaurant}}
+      {{turn.restaurant}}
     </div>
     <div class="text">
-      Mas inform
+      {{turn.user.email}}
     </div>
   </mat-card>
 </div>
