--- a/SmartLunchClient/src/app/turn/turn.component.html
+++ b/SmartLunchClient/src/app/turn/turn.component.html
@@ -1,4 +1,5 @@
 <div class="info">
+  <mat-card>
     <mat-icon style="font-size: 256px; width: 100%;" color="accent">done_all</mat-icon>
     <h1>Tienes el turno</h1>
     <div class="turn">
@@ -13,5 +14,3 @@
     </div>
   </mat-card>
 </div>
-
-
